--- a/src/main/resources/templates/checkout.html
+++ b/src/main/resources/templates/checkout.html
@@ -22,6 +22,7 @@
 <h2>Checkout</h2>
 
 <!--navbar-->
+<div th:replace="fragment :: navbar"></div>
 <!--continue shopping-->
 <!--card informaiton-->
 
