--- a/src/main/resources/templates/login.html
+++ b/src/main/resources/templates/login.html
@@ -18,9 +18,17 @@
         integrity="sha384-wfSDF2E50Y2D1uUdj0O3uMBJnjuUD4Ih7YwaYd1iqfktj0Uod8GCExl3Og8ifwB6"
         crossorigin="anonymous"></script>
 
-<h2>Login</h2>
+<h2>Login Page</h2>
 
 <!--Login form-->
-
-</body>
-</html>
+<div th:if="${param.error}">Invalid Username or Password.</div>
+<form th:action="@{/login}" method="post">
+    <div>
+        Username<input type="text" name="username">
+        <br>
+        Password<input type="text" name="password">
+    </div>
+    <div>
+        <input type="submit" value="Submit">
+    </div>
+</form>
