guest view permited by all, user/admin required login

--- a/src/main/resources/templates/login.html
+++ b/src/main/resources/templates/login.html
@@ -29,6 +29,6 @@
         Password<input type="text" name="password">
     </div>
     <div>
-        <input type="submit" value="Submit">
+        <input th:href="@{/user}" type="submit" value="Submit">
     </div>
 </form>
